--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="indx.css">
-    <title>Your Android Games</title>
+    <title>Elamli</title>
 </head>
 <body>
     <header>
